update to jts 1.14.0 and removed deprecation warnings from geox-feature and geox-spatial